--- a/src/components/Gif.css
+++ b/src/components/Gif.css
@@ -1,19 +1,22 @@
 .Gif {
-  border: 1px solid #eee;
   border-radius: 6px;
   display: flex;
   color: #fff;
   flex-direction: column;
   text-decoration: none;
   margin: 16px;
-  padding: 32px;
   width: 100%;
+  position: relative;
 }
 
 .Gif h4 {
   margin: 0;
+  position: absolute;
+  bottom: 0;
+  left: 0;
 }
 
 .Gif img {
-  object-fit: contain;
+  object-fit: cover;
+  width: 100%;
 }
